--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,7 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-docs/.vitepress
+docs/.vitepress/dist
 
 # Dependency directories
 node_modules/
